ordering cards and more style changes

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,7 @@
 /***********************************************************/
 .navbar {
   font-size: 14px;
+  background-color: rgb(69, 59, 92);
 }
 
 .nav-logo {
