Working as separate components

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,14 @@
 }
 
 /***********************************************************/
+/* App Body */
+/***********************************************************/
+
+.appBody {
+  margin: 0 10px;
+}
+
+/***********************************************************/
 /* CheckInOut */
 /***********************************************************/
 .main-schedule {
